# vibe-trading-A

./: .dockerignore  .gitignore  .gitleaks.toml  AGENT_CONTRIBUTOR_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  NOTICE  OPEN_SOURCE_CHECKLIST.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
agent/: .env.example  .gitignore  SKILL.md  api_server.py  requirements.txt
agent/backtest/: runner.py  validation.py
agent/backtest/engines/: _market_hooks.py  base.py  china_a.py  global_equity.py
agent/backtest/loaders/: alphavantage_loader.py  base.py  ccxt_loader.py  finnhub_loader.py  fmp_loader.py  futu.py  local_loader.py  okx.py  registry.py  rsshub_events.py  sec_edgar_client.py  tiingo_loader.py  tushare.py  yahoo_client.py  yahoo_loader.py  yfinance_loader.py
agent/backtest/rules/: __init__.py  ashare.py  manifest.yaml  programmatic.py
agent/cli/: _legacy.py  main.py  onboard.py  stream.py  theme.py
agent/cli/commands/: help.py
agent/cli/components/: working_indicator.py
agent/scripts/: bench_performance.py  w4a_patch_blog.py  w4a_run_benches.py
agent/src/: market_data.py  preflight.py  ui_services.py
agent/src/agent/: context.py  loop.py  skills.py
agent/src/api/: alpha_routes.py  auth_routes.py  channels_routes.py  deployment_routes.py  settings_routes.py  system_routes.py  uploads_routes.py
agent/src/channels/: __init__.py  base.py  config.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  mochat.py  msteams.py  napcat.py  qq.py  registry.py  signal.py  slack.py  telegram.py  utils.py  websocket.py  wecom.py  weixin.py  whatsapp.py
agent/src/channelsui/: __init__.py  cli_apps_api.py  forking.py  gateway_services.py  http_utils.py  mcp_presets_api.py  transcription_ws.py  websocket_logging.py
agent/src/config/: paths.py  schema.py
agent/src/core/: runner.py
agent/src/factors/: _backend.py  base.py  bench_runner.py  registry.py
agent/src/goal/: policy.py
agent/src/live/: enforcement.py  mode.py  order_guard.py  registry.py
agent/src/memory/: persistent.py
agent/src/providers/: chat.py  content_filter.py  llm.py  llm_providers.json  openai_codex.py
agent/src/scheduled_research/: __init__.py  executor.py  models.py  store.py
agent/src/security/: network.py  secret_policy.py  workspace_access.py  workspace_policy.py
agent/src/session/: goal_state.py  models.py  service.py  webui_turns.py
agent/src/shadow_account/: backtester.py  codegen.py  extractor.py  models.py  reporter.py
agent/src/swarm/: grounding.py  models.py  runtime.py  worker.py
agent/src/tools/: __init__.py  alpha_bench_tool.py  market_data_tool.py  market_screener_tool.py  mcp.py  path_utils.py  swarm_tool.py  symbol_search_tool.py  write_file_tool.py
agent/src/trading/: profiles.py  service.py
agent/src/utils/: media_decode.py
agent/tests/: conftest.py  mcp_http_test_helpers.py  test_advisory.py  test_agent_config.py  test_agent_goal_context.py  test_agent_guide_paths.py  test_agent_loop_content_filter.py  test_agent_loop_dsml_tool_calls.py  test_agent_loop_no_assistant_prefill.py  test_agent_loop_stream_retry.py  test_agent_loop_terminal_state.py  test_agent_loop_thought_signature.py  test_agent_loop_trace.py  test_akshare_loader.py  test_alpha_compare_api.py  test_alpha_compare_tool.py  test_alphavantage_loader.py  test_api_live_runtime.py  test_audit_redact.py  test_autopilot_phase3.py  test_autopilot_tool.py  test_backtest_runner_security.py  test_baostock_loader.py  test_base_engine.py  test_bench_parallel.py  test_block_trades_tool.py  test_ccxt_loader_bounded.py  test_ccxt_loader_proxy.py  test_channels_api.py  test_chat_llm_streaming.py  test_china_a_engine.py  test_china_futures_engine.py  test_classification.py  test_cli_channels.py  test_cli_goal.py  test_cli_hypothesis.py  test_cli_init.py  test_cli_interactive.py  test_cli_live.py  test_cli_memory.py  (+177 more)
agent/tests/factors/: conftest.py  test_academic_samples.py  test_alpha101_samples.py  test_alpha_compare.py  test_alpha_purity.py  test_base.py  test_bench_strict.py  test_gtja191_part1_samples.py  test_gtja191_part2_samples.py  test_lookahead.py  test_qlib158_samples.py  test_registry.py
agent/tests/fixtures/: fake_mcp_server.py  fake_mcp_sse_server.py  fake_mcp_streamable_http_server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: i18next.d.ts  index.css  main.tsx  router.tsx
frontend/src/__tests__/: viteProxy.test.ts
frontend/src/hooks/: useDarkMode.ts  useSSE.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: api.ts  apiAuth.ts  chart-theme.ts  echarts.ts  tools.ts  (+4 more)
scripts/: dev  security-scan.ps1
tools/: ci_grep_gates.sh
wiki/: README.md  _headers  _redirects  index.html  main.js  styles.css  theme-init.js  theme.js  wrangler.toml
wiki/alpha-library/: index.html
wiki/docs/: content.js  index.html  main.js  styles.css
wiki/functions/: _middleware.js
wiki/home/: index.html
wiki/locales/: en.json
wiki/research-lab/: index.html
wiki/scripts/: build_alpha_library.py
wiki/tutorials/: index.html  vibe-trading-beginner-zh.html
(+120 files in other folders)
